--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family: "DM Serif Display", sans-serif ;
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +14,33 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0% 3%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+h1{
+  font-size: 2rem;
+  color:rgba(44, 43, 43, 0.926);
+}
+
+h4{
+  font-size: 1rem;
+  color:rgba(44, 43, 43, 0.926);
+}
+
+h3{
+  font-size: 1.4rem ;
+  color: rgba(44, 43, 43, 0.926);
+  line-height: 2.5 rem;
+  margin: 2rem 0rem;
+}
+
+a{
+   color: rgba(44, 43, 43, 0.926);
+}
+
